Prevent wrapping

--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -224,6 +224,7 @@ table {
   -webkit-box-shadow: 0 1px 0 rgba(0,0,0,.15);
   -moz-box-shadow: 0 1px 0 rgba(0,0,0,.15);
   box-shadow: 0 1px 0 rgba(0,0,0,.15);
+  white-space: nowrap;
 }
 .ingredients-list dd {
   width: 70%;
